[email] translation fix

--- a/templates/validationMail.html.twig
+++ b/templates/validationMail.html.twig
@@ -10,12 +10,11 @@
     </style>
 </head>
     <body>
-
         <h1>Verify your account</h1>
 
         <h3>Hello {{ name }} {{ surname }},</h3>
 
-        <p>You've just registered on "Climate stories bank", please click the link below to verify and activate it :</p>
+        <p>You've just registered on "Climate stories bank", please click the link below to verify and activate your account :</p>
 
         <a href="http://localhost:8000/validation/{{ expireOn }}/{{ email }}/{{ token }}">verify my account</a>
 
