--- a/templates/admin/adminStory.html.twig
+++ b/templates/admin/adminStory.html.twig
@@ -4,7 +4,7 @@
 
     {{ include('admin/adminNav.html.twig') }}
 
-    <h1 class="titleNoPadding">{{ title|upper }}</h1>
+    <h1 class="titleNoPadding" id="adminStoryTitle">{{ title|upper }}</h1>
 
     <div class="filterList">
         <h3>Filters</h3>
