[style/template] legal notice page

--- a/templates/legalNotice.html.twig
+++ b/templates/legalNotice.html.twig
@@ -7,12 +7,12 @@
 
     <div class="container-fluid">
         {% for term in termList %}
-            <h3 class="articleTitle">{{ term.title }}
-                <i class="fa fa-caret-right toggleIcon" aria-hidden="true" id="toggle-{{ term.id }}"></i>
+            <h3 class="articleTitle"><span class="termNumber">{{ loop.index }}. </span>{{ term.title }}
+                <i class="fa fa-caret-right toggleIcon" aria-hidden="true" id="toggle-{{ loop.index }}"></i>
             </h3>
-            <div class="termBody" id="term-{{ term.id }}" style="display: none">
+            <div class="termBody" id="term-{{ loop.index }}" style="display: none">
                  <div class="termArticle">
-                     {{ term.article|raw }}
+                 {{term.article|raw }}
                  </div>
             </div>
             <hr class="termBreak">
