--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -3,12 +3,12 @@
 {% block body %}
 
 
-    <div class="msgErrorPage" style="margin-top: 300px">
+    <div class="msgErrorPage">
         <p>{{ message }}</p>
     </div>
 
 
-    <div>
+    <div class="backToHome">
         <a class="btn btn-warning" href="{{ path('home') }}">Back to homepage</a>
     </div>
 
