[js/sass] register form ui improvement

--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -1921,6 +1921,10 @@ table .rightText{
 			}
 		}
 
+		#invalid_pswd{
+			font-size: 1rem;
+		}
+
 		#lost.pull-right{
 			position: relative !important;
 			right: 25px;
