--- a/templates/connectionForms.html.twig
+++ b/templates/connectionForms.html.twig
@@ -101,7 +101,7 @@
                 <span class="valid_sign" id="valid_pswd_icon" style="display: none">
                     <i class="fa fa-check" aria-hidden="true"></i>
                 </span>
-                <span class="invalid" id="invalid_pswd" style="display: none">Between 6 up to 30 letters</span>
+                <span class="invalid" id="invalid_pswd" style="display: none">6 characters minimum mixing letters and numbers</span>
             </div>
             <div class="form-group row col-md-12" id="confirm" style="display: none">
                 {{ form_label(form.confirmPswd) }}
