--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -16,7 +16,7 @@
                 Number of registered users  <span class="count pull-right"> {{ roleEdit + roleUser }}</span>
             </li>
             <li>
-                Users with access to the edition tools  <span class="count pull-right"> {{ roleEdit }} </span>
+                With access to the edition tools  <span class="count pull-right"> {{ roleEdit }} </span>
             </li>
             <li>
                 Number of unactivated account  <span class="count pull-right"> {{ unactivated }} </span>
@@ -60,6 +60,16 @@
     <div class="modalForm" id="modalAdmin"  style="display: none">
         <i class="fa fa-times closeModal"></i>
         {{ form_start(form ,{'attr':{'id':'updateAdministrator'}}) }}
+        <div class="form-group row">
+            {{ form_label(form.name) }}
+            {{ form_widget(form.name) }}
+            {{ form_errors(form.name) }}
+        </div>
+        <div class="form-group row">
+            {{ form_label(form.surname) }}
+            {{ form_widget(form.surname) }}
+            {{ form_errors(form.surname) }}
+        </div>
         <div class="form-group row">
             {{ form_label(form.email) }}
             {{ form_widget(form.email) }}
