[js/sass] fix=>card width  +  home link

--- a/public/sass/import/_tablet.scss
+++ b/public/sass/import/_tablet.scss
@@ -49,6 +49,10 @@
     top: 25px;
   }
 
+  .storyCard{
+    min-width: 25%;
+  }
+
 }
 
 /* Fin de @media (min-width: 40.063em)/* = min-width 641px */
