--- a/public/sass/import/_mobile.scss
+++ b/public/sass/import/_mobile.scss
@@ -494,6 +494,9 @@ a.editFront:focus{
 	}
 	li {
 		font-size: 0.9em;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	i {
 		color: $secondary-color;
@@ -1101,6 +1104,8 @@ h1,
 	float: left;
 	i{
 		color: $primary-color;
+		position: relative;
+		margin-left: -5px;
 	}
 }
 /*------browse-------*/
