[fix/template] add forgottoen ''parent()''

--- a/templates/story.html.twig
+++ b/templates/story.html.twig
@@ -99,6 +99,7 @@
 {% endblock %}
 
 {% block javascripts %}
+    {{ parent() }}
     <script src="{{ asset('js/modal.js') }}"></script>
     <script src="{{ asset('js/scroll.js') }}"></script>
 {% endblock %}
